--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@
     left: 50%;
     padding: 1em;
     position: absolute;
+    text-align: center;
     top: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 2px -10px 2px rgba(0, 0, 0, 0.8);
